--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Git san tar par</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ex optio quidem harum, similique ratione nisi vitae debitis nobis commodi minus, soluta deleniti quod blanditiis odio amet laboriosam voluptatum. Inventore!</p>
     <script src="js/app.js">
         
     </script>
